force-app/main/default/objects/CW_supplier_memo__c/CW_supplier_memo__c.object-meta.xml
<CustomObject>
    <label>仕入先メモ</label>
    <nameField>
        <label>仕入先メモ名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>