force-app/main/default/objects/CW_supplier_memo__c/fields/cw_customer__c.field-meta.xml
<CustomField>
    <fullName>cw_customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>得意先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>仕入先メモ</relationshipLabel>
    <relationshipName>cw_yyyyy</relationshipName>
    <type>Lookup</type>
</CustomField>