force-app/main/default/objects/CW_supplier_memo__c/fields/cw_opportunity__c.field-meta.xml
<CustomField>
    <fullName>cw_opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>商談</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>仕入先メモ</relationshipLabel>
    <relationshipName>cw_xxxxx</relationshipName>
    <type>Lookup</type>
</CustomField>