force-app/main/default/objects/CW_supplier_memo__c/fields/ju_siiresakimemo_syousai__c.field-meta.xml
<CustomField>
    <fullName>ju_siiresakimemo_syousai__c</fullName>
    <label>詳細</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>