force-app/main/default/objects/CW_supplier_memo__c/recordTypes/siiresakimemo_zyukannkyo_recordtype.recordType-meta.xml
<RecordType>
    <fullName>siiresakimemo_zyukannkyo_recordtype</fullName>
    <active>true</active>
    <label>【仕入先メモ】住環境</label>
</RecordType>