force-app/main/default/objects/CW_supplier_memo__c/listViews/cw_my_supplier_memo.listView-meta.xml
<ListView>
    <fullName>cw_my_supplier_memo</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>cw_supplier__c</columns>
    <columns>cw_customer__c</columns>
    <columns>cw_opportunity__c</columns>
    <filterScope>Mine</filterScope>
    <label>私の仕入先メモ</label>
</ListView>